# whachadoin

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.claude-plugin/: marketplace.json
.claude/skills/verify/: SKILL.md
.github/workflows/: marketplace-issue.yml  release-please.yml
docs/superpowers/plans/: 2026-07-09-whachadoin-implementation.md  2026-07-09-worklog-plugin.md
docs/superpowers/specs/: 2026-07-09-whachadoin-design.md  2026-07-09-worklog-plugin-design.md
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: log.md  worklog.md
plugin/hooks/: hooks.json  worklog-journal.sh
plugin/skills/worklog/: SKILL.md
src/whachadoin/: __init__.py  cli.py  db.py  models.py  tui.py
tests/: test_db.py
