[project]
name = "whachadoin"
version = "0.2.0"
description = "Personal work-log and todo tracker (CLI + TUI)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.4",
    "textual>=8.2.8",
    "typer>=0.26.8",
]

[project.scripts]
kwd = "whachadoin.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whachadoin"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
