[project]
name = "whachadoin"
version = "0.3.0"
description = "Personal work-log and todo tracker (CLI + TUI)"
readme = "README.md"
requires-python = ">=3.13"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Kerry Hatcher", email = "kerry@kerryhatcher.com" }]
dependencies = [
    "pydantic>=2.13.4",
    "textual>=8.2.8",
    "typer>=0.26.8",
]

[project.urls]
Homepage = "https://github.com/kerryhatcher/whachadoin"
Repository = "https://github.com/kerryhatcher/whachadoin"
Issues = "https://github.com/kerryhatcher/whachadoin/issues"

[project.scripts]
kwd = "whachadoin.cli:app"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whachadoin"]

# Explicit sdist allowlist — without this hatch ships the whole repo tree, which
# leaked internal infra (uv.lock -> Cox Artifactory URLs, AGENTS.md -> GHE host,
# docs -> local abs paths). Ship only the distributable pieces.
[tool.hatch.build.targets.sdist]
include = [
  "src",
  "tests",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
